# OFSExtractor

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  MVCPlanes.c  OFSExtractor.c  README.md  build-win32.txt  build-win64.txt  commitdate.h.in  compiledate.h.in  main.c  meson.build
include/: 3dplanes.h  util.h
python-prototype/: OFSExtractor.py
src/: 3dplanes.c  3dplanes.h  main.c  util.c
